# intermac-rs

./: CODEREVIEW.md  CODE_REVIEW_REPORT.md  Cargo.toml  README.md  SPEC.md  VIEWER-SPEC.md  clippy.toml
.github/workflows/: ci.yml  release.yml
otd-cli/: Cargo.toml
otd-cli/src/: main.rs
otd-core/: Cargo.toml
otd-core/src/: config.rs  error.rs  lib.rs
otd-core/src/generator/: cni.rs  dxf.rs  gcode.rs  mod.rs
otd-core/src/model/: cut.rs  mod.rs  piece.rs  piece_type.rs  schema.rs  shape.rs
otd-core/src/parser/: mod.rs  otd.rs  sections.rs
otd-core/src/transform/: linear.rs  mod.rs  shapes.rs
otd-core/src/validation/: mod.rs  validate.rs
otd-core/tests/: integration_tests.rs
otd-core/tests/fixtures/: cod1.cni  cod1.otd  cod1_generated.cni
otd-core/tests/fixtures/integration/: empty_shapes.cni  empty_shapes.otd  large_layout.cni  large_layout.otd  multi_piece.cni  multi_piece.otd  simple_linear.cni  simple_linear.otd  with_shapes.cni  with_shapes.otd
otd-viewer/: Cargo.toml
otd-viewer/src/: app.rs  canvas.rs  layers.rs  main.rs  theme.rs  transform.rs
src/: config.rs  error.rs  lib.rs  main.rs
src/generator/: cni.rs  gcode.rs  mod.rs
src/model/: cut.rs  piece.rs  piece_type.rs  schema.rs  shape.rs
src/parser/: otd.rs  sections.rs
src/transform/: linear.rs  shapes.rs
src/validation/: validate.rs
tests/fixtures/: cod1_generated.cni
