[package]
name = "otd-convert-rs"
version = "0.1.0"
edition = "2021"
authors = ["Intermac"]
description = "Convert OTD files to CNI format for Intermac glass cutting machines"
license = "MIT"
readme = "README.md"

[[bin]]
name = "otd-convert"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Crypto for OTX decryption
rc2 = "0.8"
md-5 = "0.10"
cipher = { version = "0.4", features = ["block-padding"] }
cbc = "0.1"

# Serialization (for debug output)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
pretty_assertions = "1"
insta = "1"
tempfile = "3"

[profile.release]
lto = true
strip = true
