[package]
name = "otd-core"
version = "0.1.0"
edition = "2021"
authors = ["Intermac"]
description = "Core library for OTD file parsing and CNI generation"
license = "MIT"

[dependencies]
# Error handling
thiserror = "1"

# Crypto for OTX decryption
rc2 = "0.8"
md-5 = "0.10"
cipher = { version = "0.4", features = ["block-padding"] }
cbc = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"

[dev-dependencies]
pretty_assertions = "1"
