[package]
name = "otd-viewer"
version = "0.1.0"
edition = "2021"
authors = ["Intermac"]
description = "GUI viewer for OTD glass cutting layouts"
license = "MIT"

[[bin]]
name = "otd-viewer"
path = "src/main.rs"

[dependencies]
otd-core = { path = "../otd-core" }
eframe = "0.29"
egui = "0.29"
rfd = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
image = "0.25"
